external-crates/move/crates/move-compiler/tests/move_2024/parser/mut_field_pun_invalid_assign.exp
warning[W09002]: unused variable
  ┌─ tests/move_2024/parser/mut_field_pun_invalid_assign.move:5:13
  │
5 │         let f = 0;
  │             ^ Unused local variable 'f'. Consider removing or prefixing with an underscore: '_f'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04016]: too few arguments
  ┌─ tests/move_2024/parser/mut_field_pun_invalid_assign.move:6:9
  │
6 │         S { mut f } = s1;
  │         ^^^^^^^^^^^ Missing assignment for field 'f' in 'a::m::S'

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/mut_field_pun_invalid_assign.move:6:13
  │
6 │         S { mut f } = s1;
  │             ^ Expected a field expression

error[E03009]: unbound variable
  ┌─ tests/move_2024/parser/mut_field_pun_invalid_assign.move:6:23
  │
6 │         S { mut f } = s1;
  │                       ^^ Unbound variable 's1'

